# sheriffclaw

./: .gitignore  .tmp_gateway_probe.py  .tmp_proxy_probe.py  AGENTS.md  LICENSE  README.md  build.sh  docker-compose.yml  install.sh  install_sheriffclaw.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_gate.py  run_server.py  sheriffclaw.sh  sheriffclaw.spec  tmp_sudoers_macmini  versions.json
.codex/: ARCHITECTURE_MAP.md  CHANGE_CHECKLIST.md  DEV_WORKFLOW.md  PROJECT_OVERVIEW.md  README.md  TASK_TEMPLATES.md
.githooks/: pre-push
docker/: linux-test.Dockerfile
docs/: WIKI_ROLES.md  WIKI_USAGE.md
logs/: WORKLOG.md
python_openclaw/: main.py
scripts/: agent_self_wakeup_work.sh  e2e_cli_simulation.sh  e2e_fresh_install_docker.sh  e2e_installation_check.sh  e2e_permissions_unlock.sh  e2e_reinstall_idempotency.sh  e2e_scenarios.sh  e2e_sheriff_entry.sh  e2e_state_isolation.sh  e2e_telegram_simulated_debug.sh  e2e_update_flow.sh  e2e_update_queue_wait.sh  e2e_update_versioning.sh  memory_chunk_b_demo.py  memory_phase1_demo.py  memory_phase2_demo.py  memory_phase4_demo.py  qa_cycle.sh  setup_git_hooks.sh  setup_wakeup_timer.sh  skill_routing_phase3_demo.py  test-all.ps1  test.ps1  test.sh  test_linux_docker.sh  use_gh_app_auth.sh
services/: __init__.py
shared/: __init__.py  agent_repo.py  approvals.py  codex_auth.py  codex_debug.py  codex_output.py  codex_session_manager.py  component_versions.py  crypto.py  errors.py  identity.py  memory_store.py  ndjson.py  oplog.py  paths.py  permissions_store.py  policy.py  proc_rpc.py  protocol.py  (+11 more)
(+208 files in other folders)
